--- a/app/src/main/res/layout-land/topper.xml
+++ b/app/src/main/res/layout-land/topper.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <TextView
-        android:id="@+id/store"
+        android:id="@+id/action_store"
         style="@style/TopperStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -12,7 +12,7 @@
         android:text="Your store is Kendall Square"
         android:background="#ffcccc"/>
     <TextView
-        android:id="@+id/rewards"
+        android:id="@+id/action_rewards"
         style="@style/TopperStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
