--- a/app/src/main/res/layout-port/topper.xml
+++ b/app/src/main/res/layout-port/topper.xml
@@ -4,14 +4,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <TextView
-        android:id="@+id/store"
+        android:id="@+id/action_store"
         style="@style/TopperStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Your store is Kendall Square"
         android:background="#ffcccc"/>
     <TextView
-        android:id="@+id/rewards"
+        android:id="@+id/action_rewards"
         style="@style/TopperStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
