--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -30,7 +30,7 @@
                 android:gravity="center"
                 android:src="@drawable/ic_drawer"/>
             <LinearLayout
-                android:id="@+id/website"
+                android:id="@+id/action_home"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
@@ -53,7 +53,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
             <ImageView
-                android:id="@+id/search"
+                android:id="@+id/action_search"
                 android:layout_width="@dimen/icon_width"
                 android:layout_height="match_parent"
                 android:gravity="center"
