--- a/app/src/main/res/layout/bundle.xml
+++ b/app/src/main/res/layout/bundle.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="#ffffff">
-        <ListView
+        <GridView
             android:id="@+id/products"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
