--- a/app/src/main/res/layout/bundle_item.xml
+++ b/app/src/main/res/layout/bundle_item.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/title"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="4dp"
-    android:textSize="16dp"
-    android:textColor="#000000"/>
+    android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:textSize="16dp"
+        android:textColor="#000000"/>
+</LinearLayout>
