--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="icon_width">36dp</dimen>
+    <dimen name="min_column_width">150dp</dimen>
 </resources>
