--- a/app/src/main/res/layout/bundle.xml
+++ b/app/src/main/res/layout/bundle.xml
@@ -3,23 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textSize="20dp"/>
     <com.staples.mobile.cfa.widget.ListViewWrapper
         android:id="@+id/wrapper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="#ffffff">
+        android:orientation="vertical">
         <GridView
             android:id="@+id/products"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:choiceMode="singleChoice"/>
+            android:horizontalSpacing="3dp"
+            android:verticalSpacing="3dp"
+            android:choiceMode="singleChoice"
+            android:background="#cccccc"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
