--- a/app/src/main/res/layout/bundle_item_tall.xml
+++ b/app/src/main/res/layout/bundle_item_tall.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/sku_row_height"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="2dp">
+    android:padding="6dp"
+    android:background="#ffffff">
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="2"
+        android:lines="2"
         android:ellipsize="end"
         android:textSize="16dp"/>
     <com.staples.mobile.cfa.widget.RatingStars
@@ -22,6 +23,6 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="@dimen/image_square_size"
+        android:layout_marginTop="4dp"/>
 </LinearLayout>
