--- a/app/src/main/res/color/sel_text_list_item.xml
+++ b/app/src/main/res/color/sel_text_list_item.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
 	 <!-- pressed -->
-	<item android:state_pressed="true" android:color="@color/text_black"/>
+	<item android:state_pressed="true" android:color="@color/text_orange_light"/>
 
 	 <!-- default -->
 	<item android:color="@color/text_black"/>
