--- a/app/src/main/res/layout/lms_item.xml
+++ b/app/src/main/res/layout/lms_item.xml
@@ -1,6 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_height="match_parent"
 	android:layout_width="match_parent"
+    android:orientation="vertical"
 	android:background="@drawable/rectangle_frame"
 >
 	<TextView
@@ -18,7 +19,6 @@
 	<ImageView
 		android:id="@+id/categoryImageView"
 		android:adjustViewBounds="true"
-		android:layout_below="@+id/titleTextView"
 		android:layout_height="wrap_content"
 		android:layout_marginLeft="24dp"
 		android:layout_marginRight="24dp"
@@ -26,4 +26,4 @@
 		android:layout_width="match_parent"
 	/>
 
-</RelativeLayout>
+</LinearLayout>
