--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,12 +6,12 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:padding">4dp</item>
-        <item name="android:textSize">18dp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textColor">#000000</item>
     </style>
 
     <style name="TopperStyle">
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="CartHeader" parent="DrawerStyle">
@@ -24,12 +24,26 @@
 		<item name="android:textColor">@color/sel_text_list_item</item>
 	</style>
 
+    <style name="SkuSummaryTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="SkuSummaryHeader">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="LargeRatingStars">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">16sp</item>
         <item name="android:gravity">center</item>
-        <item name="noReviews">(no reviews)</item>
+        <item name="noReviews">@string/no_reviews</item>
     </style>
     <style name="SmallRatingStars">
         <item name="android:layout_width">match_parent</item>
