--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -30,11 +30,41 @@
             android:id="@+id/cartitem_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/cartitem_qty"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp"/>
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/qty_abbrev"
+                android:textSize="16dp"/>
+            <EditText
+                android:id="@+id/cartitem_qty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numeric="integer"
+                android:imeOptions="actionDone"
+                android:textSize="16dp"/>
+            <Button
+                android:id="@+id/cartitem_increase_qty"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:text="^"
+            />
+            <Button
+                android:id="@+id/cartitem_decrease_qty"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:text="v"
+                />
+            <Button
+                android:id="@+id/cartitem_delete"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:text="x"
+                />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
 
