--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.cfa.widget.ListViewWrapper xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/wrapper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
     <ScrollView
+        android:id="@+id/summary"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -37,12 +39,12 @@
             <TextView
                 style="@style/SkuSummaryHeader"
                 android:text="@string/product_description"/>
-            <TextView
+            <LinearLayout
+                android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="4dp"
-                android:textSize="16dp"
-                android:text="@string/lorem_ipsum"/>
+                android:orientation="vertical">
+            </LinearLayout>
             <TextView
                 style="@style/SkuSummaryHeader"
                 android:text="@string/product_specs"/>
@@ -63,6 +65,22 @@
                 android:text="@string/lorem_ipsum"/>
         </LinearLayout>
     </ScrollView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center">
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textSize="20dp"
+        android:text="@string/empty"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -71,4 +89,4 @@
         android:textSize="20dp"
         android:background="#00ff00"
         android:text="@string/add_to_cart"/>
-</com.staples.mobile.cfa.widget.AnimatorLayout>
+</com.staples.mobile.cfa.widget.ListViewWrapper>
