--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -71,4 +71,11 @@
         <item name="stripeThickness">3dp</item>
         <item name="android:textSize">12sp</item>
     </style>
+
+    <style name="BulletStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">2dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
