--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -18,121 +18,141 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:visibility="invisible">
-        <!-- ActionBar -->
-        <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="56dp"
-              android:orientation="horizontal"
-              android:animateLayoutChanges="true"
-              android:background="@color/staples_light">
-            <!-- close button (only visible when checkout displayed)-->
-            <ImageView
-                android:id="@+id/close_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:src="@drawable/ic_close_white"
-                android:clickable="true"
-                android:visibility="gone"/>
-            <ImageView
-                android:id="@+id/action_left_drawer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:paddingLeft="6dp"
-                android:paddingRight="16dp"
-                android:src="@drawable/ic_menu_white"/>
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:gravity="center_vertical|left"
-                android:textSize="24sp"
-                android:textColor="@android:color/white"
-                android:text="@string/staples"/>
-            <!-- Search Bar -->
-            <com.staples.mobile.cfa.search.SearchBarView
-                android:id="@+id/search_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:maxWidth="200dp"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:layout_gravity="center_vertical|right"
-                android:visibility="gone"
-                android:inputType="textAutoComplete|textAutoCorrect"
-                android:imeOptions="actionSearch|flagNoExtractUi"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:singleLine="true"
-                android:hint="@string/original_hint"
-                android:textSize="18sp"
-                android:textColor="@android:color/white"/>
-            <ImageView
-                android:id="@+id/option_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_search_white"/>
-            <!--cart item qty (only visible when cart displayed)-->
-            <TextView
-                android:id="@+id/cart_item_qty"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:gravity="center_vertical|right"
-                android:layout_marginRight="6dp"
-                android:textSize="20sp"
-                android:textColor="@android:color/white"
-                android:visibility="gone"/>
-            <!--checkout sign-in button (only visible when guest checkout displayed)-->
-            <Button
-                android:id="@+id/co_signin_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:text="@string/signin_title"
-                android:visibility="gone"
-                android:layout_marginRight="10dp"/>
-            <!-- Cart icon with badge -->
-            <com.staples.mobile.cfa.widget.BadgeImageView
-                android:id="@+id/action_show_cart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="6dp"
-                android:textSize="15sp"
-                android:textColor="@color/text_black"
-                android:src="@drawable/ic_shopping_cart_white"/>
-        </LinearLayout>
-        <android.support.v4.widget.DrawerLayout
-            android:id="@+id/drawer_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <!-- Main content -->
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+            <!-- Fragment Contain -->
             <FrameLayout
-                android:id="@+id/content"
+                android:id="@+id/contain_frame"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
-            <!-- Left drawer (menu) -->
-            <ListView
-                android:id="@+id/left_drawer"
-                android:layout_width="200dp"
                 android:layout_height="match_parent"
-                android:layout_gravity="start"
-                android:orientation="vertical"
-                android:background="#ffffff"
-                android:choiceMode="singleChoice"/>
-        </android.support.v4.widget.DrawerLayout>
+                android:paddingTop="56dp">
+                <android.support.v4.widget.DrawerLayout
+                    android:id="@+id/drawer_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <!-- Main content -->
+                    <FrameLayout
+                        android:id="@+id/content"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"/>
+                    <!-- Left drawer (menu) -->
+                    <ListView
+                        android:id="@+id/left_drawer"
+                        android:layout_width="200dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="start"
+                        android:orientation="vertical"
+                        android:background="#ffffff"
+                        android:choiceMode="singleChoice"/>
+                </android.support.v4.widget.DrawerLayout>
+            </FrameLayout>
+
+            <!-- ActionBar -->
+            <FrameLayout
+                android:id="@+id/action_bar_frame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <LinearLayout
+                    android:id="@+id/action_bar"
+                      android:layout_width="match_parent"
+                      android:layout_height="56dp"
+                      android:orientation="horizontal"
+                      android:animateLayoutChanges="true"
+                      android:background="@color/staples_light">
+                    <!-- close button (only visible when checkout displayed)-->
+                    <ImageView
+                        android:id="@+id/close_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:src="@drawable/ic_close_white"
+                        android:clickable="true"
+                        android:visibility="gone"/>
+                    <ImageView
+                        android:id="@+id/action_left_drawer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:paddingLeft="6dp"
+                        android:paddingRight="16dp"
+                        android:src="@drawable/ic_menu_white"/>
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:paddingLeft="4dp"
+                        android:paddingRight="4dp"
+                        android:gravity="center_vertical|left"
+                        android:textSize="24sp"
+                        android:textColor="@android:color/white"
+                        android:text="@string/staples"/>
+                    <!-- Search Bar -->
+                    <com.staples.mobile.cfa.search.SearchBarView
+                        android:id="@+id/search_text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:maxWidth="200dp"
+                        android:paddingLeft="4dp"
+                        android:paddingRight="4dp"
+                        android:layout_gravity="center_vertical|right"
+                        android:visibility="gone"
+                        android:inputType="textAutoComplete|textAutoCorrect"
+                        android:imeOptions="actionSearch|flagNoExtractUi"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:singleLine="true"
+                        android:hint="@string/original_hint"
+                        android:textSize="18sp"
+                        android:textColor="@android:color/white"/>
+                    <ImageView
+                        android:id="@+id/option_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/ic_search_white"/>
+                    <!--cart item qty (only visible when cart displayed)-->
+                    <TextView
+                        android:id="@+id/cart_item_qty"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:paddingLeft="4dp"
+                        android:paddingRight="4dp"
+                        android:gravity="center_vertical|right"
+                        android:layout_marginRight="6dp"
+                        android:textSize="20sp"
+                        android:textColor="@android:color/white"
+                        android:visibility="gone"/>
+                    <!--checkout sign-in button (only visible when guest checkout displayed)-->
+                    <Button
+                        android:id="@+id/co_signin_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:text="@string/signin_title"
+                        android:visibility="gone"
+                        android:layout_marginRight="10dp"/>
+                    <!-- Cart icon with badge -->
+                    <com.staples.mobile.cfa.widget.BadgeImageView
+                        android:id="@+id/action_show_cart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginRight="6dp"
+                        android:textSize="15sp"
+                        android:textColor="@color/text_black"
+                        android:src="@drawable/ic_shopping_cart_white"/>
+                </LinearLayout>
+            </FrameLayout>
+        </RelativeLayout>
     </com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay>
 
     <RelativeLayout
