--- a/app/src/main/res/layout/coupon_item_redeemable.xml
+++ b/app/src/main/res/layout/coupon_item_redeemable.xml
@@ -7,7 +7,9 @@
     android:id="@+id/coupon_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp">
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
+    >
 
     <!--text fields-->
     <LinearLayout
@@ -29,7 +31,7 @@
             />
     </LinearLayout>
 
-    <!--add button-->
+    <!--ADD button-->
     <Button
         android:id="@+id/reward_add_button"
         android:layout_width="80dp"
@@ -45,6 +47,25 @@
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
+        />
+
+    <!--REMOVE button (only used in rewards dashboard)-->
+    <Button
+        android:id="@+id/reward_remove_button"
+        android:layout_width="80dp"
+        android:layout_height="35dp"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="center_vertical"
+        android:background="@color/background_extra_light_gray"
+        android:text="@string/remove"
+        android:textSize="14dp"
+        android:textColor="@color/text_black"
+        android:fontFamily="sans-serif"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:visibility="gone"
         />
 
 </RelativeLayout>
