--- a/app/src/main/res/layout/rewards_fragment.xml
+++ b/app/src/main/res/layout/rewards_fragment.xml
@@ -20,7 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             card_view:contentPadding="6dp"
             card_view:cardCornerRadius="8dp"
             card_view:cardElevation="4dp"
