--- a/app/src/main/res/layout/rewards_list.xml
+++ b/app/src/main/res/layout/rewards_list.xml
@@ -9,8 +9,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/rewards_list"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
