--- a/app/src/main/res/layout/list_view_row.xml
+++ b/app/src/main/res/layout/list_view_row.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:weightSum="1">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -15,17 +13,45 @@
         android:src="@drawable/bullet"
         />
 
-    <TextView
-        android:layout_width="325dp"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:textStyle="bold"
-        android:id="@+id/rowItemText" />
-
-    <ImageButton
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:paddingTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:textSize="20dip"
+            android:textColor="@android:color/black"
+            android:id="@+id/rowItemText" />
+
+        <TextView
+            android:paddingTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:textSize="20dip"
+            android:textColor="@android:color/darker_gray"
+            android:id="@+id/secondItemText"
+            android:paddingBottom="5dp"/>
+        </LinearLayout>
+
+
+    <ImageButton
+        android:layout_width="30dip"
+        android:layout_height="wrap_content"
         android:id="@+id/listOptions"
+        android:layout_alignParentRight="true"
         android:src="@drawable/ic_action_navigation_more_vert"/>
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cardTypeImg"
+        android:layout_centerVertical="true"
+        android:layout_below="@+id/selectionImage"
+        android:layout_toLeftOf="@+id/listOptions"
+        android:layout_toStartOf="@+id/listOptions" />
+
+</RelativeLayout>
