--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -6,4 +6,9 @@
     <dimen name="image_square_size">80dp</dimen>
     <dimen name="horizontal_divider_thickness">1dp</dimen>
     <dimen name="horizontal_divider_gap">16dp</dimen>
+    <dimen name="diameter">48dp</dimen>
+    <dimen name="elevation_low">1dp</dimen>
+    <dimen name="elevation_high">4dp</dimen>
+    <dimen name="add_button_margin">16dp</dimen>
+    <dimen name="round_button_diameter">60dp</dimen>
 </resources>
