--- a/app/src/main/res/layout/bundle_item_tall.xml
+++ b/app/src/main/res/layout/bundle_item_tall.xml
@@ -3,26 +3,29 @@
     android:id="@+id/bundle_item"
     android:layout_width="match_parent"
     android:layout_height="@dimen/fixed_grid_tall_height"
-    android:padding="6dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:background="#ffffff">
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="@dimen/image_square_size"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginTop="22dp"/>
     <TextView
         android:id="@+id/title"
         style="@style/SmallProductTitle"
-        android:layout_below="@+id/image"/>
+        android:layout_below="@+id/image"
+        android:layout_marginTop="20dp"/>
     <com.staples.mobile.cfa.widget.PriceSticker
         android:id="@+id/pricing"
         style="@style/SmallPriceSticker"
-        android:layout_below="@+id/title"/>
+        android:layout_below="@+id/title"
+        android:layout_marginTop="6dp"/>
     <com.staples.mobile.cfa.widget.RatingStars
         android:id="@+id/rating"
         style="@style/SmallRatingStars"
-        android:layout_below="@+id/pricing"/>
+        android:layout_below="@+id/pricing"
+        android:layout_marginTop="6dp"/>
     <ImageView
         android:id="@+id/bundle_action"
         android:layout_width="wrap_content"
