--- a/app/src/main/res/layout/bundle_item_wide.xml
+++ b/app/src/main/res/layout/bundle_item_wide.xml
@@ -2,29 +2,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/fixed_grid_wide_height"
-    android:padding="6dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:background="#ffffff">
     <ImageView
         android:id="@+id/image"
         android:layout_width="@dimen/image_square_size"
         android:layout_height="@dimen/image_square_size"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginRight="6dp"/>
+        android:layout_marginTop="22dp"
+        android:layout_marginRight="16dp"/>
     <TextView
         android:id="@+id/title"
         style="@style/SmallProductTitle"
-        android:layout_toRightOf="@+id/image"/>
+        android:layout_toRightOf="@+id/image"
+        android:layout_marginTop="22dp"/>
     <com.staples.mobile.cfa.widget.PriceSticker
         android:id="@+id/pricing"
         style="@style/SmallPriceSticker"
         android:layout_alignLeft="@+id/title"
-        android:layout_below="@+id/title"/>
+        android:layout_below="@+id/title"
+        android:layout_marginTop="6dp"/>
     <com.staples.mobile.cfa.widget.RatingStars
         android:id="@+id/rating"
         style="@style/SmallRatingStars"
         android:layout_alignLeft="@+id/pricing"
-        android:layout_below="@+id/pricing"/>
+        android:layout_below="@+id/pricing"
+        android:layout_marginTop="6dp"/>
     <ImageView
         android:id="@+id/bundle_action"
         android:layout_width="wrap_content"
