--- a/app/src/main/res/drawable/oval.xml
+++ b/app/src/main/res/drawable/oval.xml
@@ -1,9 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-    <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="@android:color/holo_red_light">
-        <item>
-            <shape android:shape="oval">
-                <solid android:color="@android:color/holo_red_dark"/>
-            </shape>
-        </item>
-    </ripple>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+
+    <solid android:color="@color/staples_dark"/>
+</shape>
