--- a/app/src/main/res/layout/profile_listview_row.xml
+++ b/app/src/main/res/layout/profile_listview_row.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:text="New Text"
             android:textSize="20dip"
-            android:textColor="@android:color/darker_gray"
+            android:textColor="@color/text_gray"
             android:id="@+id/secondItemText"
             android:paddingBottom="5dp"/>
         </LinearLayout>
